<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="caroline">Caroline</string>
    <string name="caroline_same">Caroline</string>
</resources>